--- a/app/views/widgets/primary_content/_tabs_1.html
+++ b/app/views/widgets/primary_content/_tabs_1.html
@@ -1,4 +1,4 @@
-<div class="newsEvents tabs-widget">
+<div class="tabs-widget">
     <ul class="newsEventsNav">
         <li class="active">Undergraduate Majors</li>
         <li>Undergraduate Minors</li>
