--- a/app/assets/stylesheets/widgets/primary_column/carousel.scss
+++ b/app/assets/stylesheets/widgets/primary_column/carousel.scss
@@ -41,12 +41,9 @@
 
 .carousel-widget {
   border: 0 solid;
-  -moz-box-sizing: border-box;
-  box-sizing: inherit;
   color: inherit;
   font-size: inherit;
-  margin: 0;
-  padding: 0;
+  margin: $widget-padding 0;
   text-decoration: none;
   vertical-align: inherit;
   height: 0;
@@ -55,7 +52,6 @@
   position: relative;
   width: 100%;
   z-index: 0;
-  margin-bottom: 10px;
   box-shadow: 0 4px 4px -4px #111;
   background-color: #111;
   border-radius: 0 0 4px 4px;
