--- a/app/views/widgets/primary_content/_personnel_region_1.html
+++ b/app/views/widgets/primary_content/_personnel_region_1.html
@@ -1,4 +1,4 @@
-<div class="personnel-listing personnel-listing-widget">
+<div class="personnel-listing-widget">
     <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="Benjamin 'Hawkeye' Pierce" class="image" itemprop="image" src="<%= image_path 'placeholder/user_2.jpg' %>" style="width:120px;" />
         <div class="name" itemprop="name">Benjamin 'Hawkeye' Pierce</div>
@@ -12,8 +12,6 @@
           </a>
         </div>
     </div>
-</div>
-<div class="personnel-listing personnel-listing-widget">
     <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="Margaret 'Hot Lips' Houlihan" class="image" itemprop="image" src="<%= image_path 'placeholder/user_1.jpg' %>" style="width:120px;" />
         <div class="name" itemprop="name">Margaret 'Hot Lips' Houlihan</div>
@@ -27,8 +25,6 @@
           </a>
         </div>
     </div>
-</div>
-<div class="personnel-listing personnel-listing-widget">
     <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="First Name Last Name" class="image" itemprop="image" src="<%= image_path 'placeholder/user_3.jpg' %>" style="width:120px;" />
         <div class="name" itemprop="name">First Name Last Name</div>
@@ -38,8 +34,6 @@
         <a class="email" href="mailto:Email" itemprop="email">Email</a>
         <div class="bio">Here is a description of the personnel in question. </div>
     </div>
-</div>
-<div class="personnel-listing personnel-listing-widget">
     <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="Sherman Potter" class="image" itemprop="image" src="<%= image_path 'placeholder/user_4.jpg' %>" style="width:120px;" />
         <div class="name" itemprop="name">Sherman Potter</div>
@@ -53,8 +47,6 @@
           </a>
         </div>
     </div>
-</div>
-<div class="personnel-listing personnel-listing-widget">
     <div class="person" itemscope="itemscope" itemtype="http://schema.org/Person">
         <img alt="Walter 'Radar' O’Reilly" class="image" itemprop="image" src="<%= image_path 'placeholder/user_5.jpg' %>" style="width:120px;" />
         <div class="name" itemprop="name">Walter 'Radar' O’Reilly</div>
