--- a/app/assets/stylesheets/widgets/primary_column/collapsibles.scss
+++ b/app/assets/stylesheets/widgets/primary_column/collapsibles.scss
@@ -1,5 +1,5 @@
 .collapsibles-widget {
-  padding: $widget-padding 0;
+  padding: $primary-column-widget-spacing 0;
 }
 
 .collapsibles-widget .accordion {
