--- a/app/assets/stylesheets/widgets/primary_column/personnel-region.scss
+++ b/app/assets/stylesheets/widgets/primary_column/personnel-region.scss
@@ -1,5 +1,5 @@
 .personnel-listing-widget {
-  padding: $widget-padding 0;
+  padding: $primary-column-widget-spacing 0;
 
   .person {
     position: relative;
