--- a/app/assets/stylesheets/widgets/primary_column/regions.scss
+++ b/app/assets/stylesheets/widgets/primary_column/regions.scss
@@ -7,7 +7,7 @@ div.four-col-float {
 
 /*Region*/
 .regions-widget {
-  padding: $widget-padding 0;
+  padding: $primary-column-widget-spacing 0;
 
   .region {
     overflow: auto;
