--- a/app/assets/stylesheets/widgets/single_column/subscribe.scss
+++ b/app/assets/stylesheets/widgets/single_column/subscribe.scss
@@ -1,5 +1,5 @@
 .subscribe-widget {
-  padding: $widget-padding 0;
+  padding: $one-column-widget-spacing 0;
   background-color: $black;
   color: white;
 
