--- a/app/assets/stylesheets/widgets/news-events-feed.scss
+++ b/app/assets/stylesheets/widgets/news-events-feed.scss
@@ -25,7 +25,7 @@ $tab-content-bg-color: #f3f2ee;
 $tab-content-border-color: #cdccc7;
 
 .news-events-widget {
-  padding: $widget-padding 0;
+  padding: $one-column-widget-spacing 0;
 }
 
 .newsEvents {
