--- a/app/assets/stylesheets/widgets/single_column/cta-3-column.scss
+++ b/app/assets/stylesheets/widgets/single_column/cta-3-column.scss
@@ -1,5 +1,5 @@
 .cta-3-column-widget {
-	padding: $widget-padding 0;
+	padding: $one-column-widget-spacing 0;
 
 	.outer-container {
 		@include outer-container();
