Fixed some more spacing issue that are arising from the migration.

--- a/app/assets/stylesheets/neat/settings/_grid.scss
+++ b/app/assets/stylesheets/neat/settings/_grid.scss
@@ -59,4 +59,4 @@ $default-layout-direction: LTR !default;
 
 $one-column-widget-spacing:     16px*4 !default;
 
-$primary-column-widget-spacing: 16px*2 !default;
+$primary-column-widget-spacing: 16px !default;
