--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -43,34 +43,35 @@
 
 
 // Layout
-@import "layout/admission/primary-content";
-@import "layout/degrees-programs/main";
-@import "layout/directory/primary-content";
-@import "layout/directory/right-column";
-@import "layout/faculty/primary-content";
-@import "layout/home/main";
-@import "layout/level/header";
-@import "layout/level/layout";
-@import "layout/level/middle-right-container";
-@import "layout/level-level/middle-right-container";
-@import "layout/level-level/primary-content";
-@import "layout/level-level/two-columns";
-@import "layout/profile/primary-content";
-@import "layout/virtual-tour/layout";
+@import "layout_old/admission/primary-content";
+@import "layout_old/degrees-programs/main";
+@import "layout_old/directory/primary-content";
+@import "layout_old/directory/right-column";
+@import "layout_old/faculty/primary-content";
+@import "layout_old/home/main";
+@import "layout_old/level/header";
+@import "layout_old/level/layout";
+@import "layout_old/level/middle-right-container";
+@import "layout_old/level-level/middle-right-container";
+@import "layout_old/level-level/primary-content";
+@import "layout_old/level-level/two-columns";
+@import "layout_old/profile/primary-content";
+@import "layout_old/virtual-tour/layout";
 
-@import "layout/editable-content";
-@import "layout/footer";
-@import "layout/form";
-@import "layout/main";
-@import "layout/middle-right-container";
-@import "layout/phase4_masthead";
-@import "layout/one-column";
-@import "layout/primary-content";
-@import "layout/right-column";
-@import "layout/two-columns";
+@import "layout_old/editable-content";
+@import "layout_old/footer";
+@import "layout_old/form";
+@import "layout_old/main";
+@import "layout_old/middle-right-container";
+@import "layout_old/phase4_masthead";
+@import "layout_old/one-column";
+@import "layout_old/primary-content";
+@import "layout_old/right-column";
+@import "layout_old/two-columns";
 
-// Modules
+// Widgets
 @import "widgets/**/*";
-
+// Page Layouts
+@import "layouts/*";
 // Themes
 @import "themes/*";
