--- a/app/assets/stylesheets/widgets/single_column/cta_block.scss
+++ b/app/assets/stylesheets/widgets/single_column/cta_block.scss
@@ -23,8 +23,16 @@ $cta-block-screen-height: 150px;
     color: $black;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
-    background-color: white;
+    background-position: 25% center;
+    background-color: darken(white, 3%);
+    transition: transform 100ms;
+
+    &:hover {
+      background-color: white;
+      transform: scale(1.02);
+      z-index: 2;
+      box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.3)
+    }
 
     @include media($medium-screen) {
       width: 25%;
