--- a/app/views/one_column/sample_landing_page.html.erb
+++ b/app/views/one_column/sample_landing_page.html.erb
@@ -3,8 +3,10 @@
 
 <%= widgets <<-YAML
     primary_content:
-      - single_column/cta_block
       - single_column/messaging_1_column_facts
+      - single_column/cta_block
+      - single_column/chapman_events_feed
+      - single_column/chapman_social_feed
       # - single_column/messaging_2_column_facts
       # - single_column/messaging_2_column
       # - single_column/messaging_2_column_video
@@ -13,7 +15,6 @@
       # - single_column/messaging_2_column_text_left
       # - single_column/messaging_1_column_image
       # - single_column/messaging_1_column
-      # - single_column/chapman_social_feed
       # - single_column/cta_3_column
   YAML
 %>
