Fixed the ordered lists of posts

--- a/app/assets/stylesheets/widgets/primary_column/wysiwyg.scss
+++ b/app/assets/stylesheets/widgets/primary_column/wysiwyg.scss
@@ -1,7 +1,7 @@
 .wysiwyg-widget {
   padding: $primary-column-widget-spacing 0;
 
-  .content p:last-of-type {
+  .content > p:last-of-type {
     margin-bottom: 0;
   }
 }
