--- a/app/views/widgets/single_column/_chapman_events_feed.html
+++ b/app/views/widgets/single_column/_chapman_events_feed.html
@@ -2,6 +2,6 @@
   <h2 class="chapman-events-feed-title">Come Chill with Us</h2>
   <div id="feed-of-events"></div>
   <script>
-    $('#feed-of-events').chapmanEventsFeed({url: 'http://events.ngrok.io/', feed: true, featured: true, per: 5})
+    $('#feed-of-events').chapmanEventsFeed({url: 'http://events.chapman.edu/', feed: true, featured: true, per: 5})
   </script>
 </div>
