--- a/app/assets/stylesheets/components/editable_content.scss
+++ b/app/assets/stylesheets/components/editable_content.scss
@@ -21,4 +21,19 @@
       margin-right: 0;
     }
   }
+
+  .video {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+
+    iframe, object, embed {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
