--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -6,6 +6,7 @@
   masthead: masthead/boxes_1
 
   primary_content:
+    - primary_content/regions_1
     - primary_content/wysiwyg_editor_3
     - primary_content/collapsables_2
     - primary_content/personnel_region_2
@@ -16,7 +17,6 @@
     # - primary_content/carousel_1
     # - primary_content/carousel_2
     # - primary_content/featured_news_events_feed_1
-    # - primary_content/regions_1
     # - primary_content/sponsor_box_1
     # - primary_content/sponsor_box_2
     # - primary_content/three_photo_callout_1
