--- a/app/assets/stylesheets/layout_old/form.scss
+++ b/app/assets/stylesheets/layout_old/form.scss
@@ -68,13 +68,8 @@
   }
   input[type='submit'] {
     float: right;
-    width: 74px;
-    background-color: $cu-red;
-    border: 0;
-    -webkit-appearance: none;
-    padding: 5px 0;
     margin-top: 14px;
-    color: $white;
+    @include button;
   }
   textarea {
     width: 163px;
@@ -136,10 +131,11 @@ input[type=submit] {
 
 .responsiveForm input[type=submit],
 .responsiveForm a.button{
-    display:block;
+  @include button;
+  display: block;
 }
 
-.responsiveForm fieldset{
+.responsiveForm fieldset {
     margin:10px 0 10px 0;
 }
 .responsiveForm fieldset.showBorder {
