--- a/app/views/widgets/single_column/_messaging_1_column_image.html
+++ b/app/views/widgets/single_column/_messaging_1_column_image.html
@@ -1,4 +1,4 @@
-<div class="messaging-widget messaging-widget__1-column messaging-widget__text-light" style="background-image: url('http://www.worldfortravel.com/wp-content/uploads/2012/11/Amazon-Rainforest-America.jpg')">
+<div class="messaging-widget messaging-widget__1-column messaging-widget__text-light">
   <div class="outer-container">
     <div class="column text-column">
       <div class="column-wrap">
