--- a/app/views/widgets/single_column/_chapman_events_feed.html
+++ b/app/views/widgets/single_column/_chapman_events_feed.html
@@ -1,7 +1,17 @@
 <div class="chapman-events-feed-widget">
-  <h2 class="chapman-events-feed-title">Come Chill with Us</h2>
-  <div id="feed-of-events"></div>
-  <script>
-    $('#feed-of-events').chapmanEventsFeed({url: 'http://events.chapman.edu/', feed: true, featured: true, per: 5})
-  </script>
+  <div class="outer-container">
+    
+    <div data-chapman-events-feed="http://events.chapman.edu/">
+      <div class="section-message">
+        <h4 class="category">category</h4>
+        <h2 class="title">Screenings, Master Classes, and Film Festivals</h2>
+        <div class="body">
+          <p>
+            Students at Chapman University's Dodge College of Film and Media Arts are part of a rich culture of student life and making. Involved in making their own work from day one, students are also immersed into the culture of their industry.  Events happen throughout the year, providing advanced screenings and special guests.
+          </p>
+        </div>
+        <div class="actions"><a class= "button red">Dodge Events Calendar</a></div>
+      </div>
+    </div>
+  </div>
 </div>
