--- a/app/views/widgets/single_column/_messaging_1_column.html
+++ b/app/views/widgets/single_column/_messaging_1_column.html
@@ -1,10 +1,10 @@
 <div class="messaging-widget messaging-widget__1-column">
   <div class="outer-container">
-    <div class="column text-column">
-      <div class="column-wrap">
+    <div class="text-column">
+      <div class="section-message">
         <h4 class="category">category</h4>
-        <h1 class="title">Sample Message With Video</h1>
-        <div class="text-wrap">
+        <h2 class="title">Sample Message With Video</h2>
+        <div class="body">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
           </p>
@@ -15,7 +15,7 @@
         <div class="actions"><a class= "button red">This is a button</a></div>
       </div>
     </div>
-    <div class="column media-column">
+    <div class="media-column">
       <span class="center-media-helper"></span><div class="media fluid-width-video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/4nPuZ9chE7s" frameborder="0" allowfullscreen></iframe>
       </div>
