--- a/app/views/widgets/single_column/_messaging_2_column_facts.html
+++ b/app/views/widgets/single_column/_messaging_2_column_facts.html
@@ -1,6 +1,6 @@
 <div class="messaging-widget messaging-widget__2-column messaging-widget__text-right messaging-widget__text-dark">
   <div class="outer-container">
-    <div class="column media-column">
+    <div class="media-column">
       <span class="center-media-helper"></span>
       <div class="media">
         <div class="fact-card-container">
@@ -35,11 +35,11 @@
         </div>
       </div>
     </div>
-    <div class="column text-column">
-      <div class="column-wrap">
+    <div class="text-column">
+      <div class="section-message">
         <h4 class="category">category</h4>
-        <h1 class="title">Sample Message With Facts</h1>
-        <div class="text-wrap">
+        <h2 class="title">Sample Message With Facts</h2>
+        <div class="body">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
           </p>
