--- a/app/views/widgets/single_column/_messaging_2_column_with_bg_image.html
+++ b/app/views/widgets/single_column/_messaging_2_column_with_bg_image.html
@@ -1,15 +1,14 @@
 <div class="messaging-widget messaging-widget__2-column messaging-widget__text-left messaging-widget__text-light" style="background-image: url('http://static.dolimg.com/lucas/movies/starwars/starwars_films_03-a5f94b04af09.jpg')">
   <div class="outer-container">
-    <div class="column media-column">
+    <div class="media-column">
       <span class="center-media-helper"></span>
     </div>
-    <div class="column text-column">
-      <div class="column-wrap">
+    <div class="text-column">
+      <div class="section-message">
         <h4 class="category">category</h4>
         <h1 class="title">Obi Wan</h1>
-        <div class="text-wrap">
+        <div class="body">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit</p>
-
         </div>
         <div class="actions"><a class= "button red">This is a button</a></div>
       </div>
