--- a/app/views/widgets/single_column/_subscribe.html
+++ b/app/views/widgets/single_column/_subscribe.html
@@ -3,11 +3,19 @@
     <div class="subscribe-message-column">
       <p>Sign up to receive updates from Dodge College</p>
     </div>
-    <div class="subscribe-form-column">
+
+    <!-- Copied and Pasted in from Campaign Monitor -->
+    <div class="campaign-monitor-forms">
       <form>
-        <input type="email" class="text-input" placeholder="Your email address..."/>
-        <button type="submit" class="submit">Submit</button>
+        <p>
+          <label for="fieldEmail">Email</label><br />
+          <input type="email" required />
+        </p>
+        <p>
+          <button type="submit">Subscribe</button>
+        </p>
       </form>
     </div>
+
   </div>
 </div>
